# Dashboard

./: .eslintrc.json  .gitignore  .tsbuildinfo  .tsbuildinfo 2  CLAUDE.md  index.html  package.json  readme.md  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1753822874525-64acbd18a302.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AIChat.tsx  AddTileModal.tsx  Calendar.tsx  Dashboard.tsx  ImageGallery.tsx  LayoutPresets.tsx  Livestreams.tsx  ManageSourcesModal.tsx  Minigames.tsx  MusicPlayer.tsx  NetworkMonitor.tsx  NewsFeeds.tsx  Notes.tsx  Shortcuts.tsx  SystemMonitor.tsx  TaskIntegrationsModal.tsx  ThemeSelector.tsx  TodoList.tsx  TravelWidget.tsx  WeatherWidget.tsx
src/components/games/: Game2048.tsx  SnakeGame.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useDragAndDrop.ts  useDynamicTiles.ts  useLocalStorage.ts  useTileExpansion.ts
src/utils/: rssParser.ts  streamUtils.ts  weatherApi.ts
src/utils/taskIntegrations/: github.ts  manager.ts  todoist.ts  types.ts
