[package]
name = "dashboard-app"
version = "1.0.0"
description = "A modern dashboard application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-start-dragging", "window-show", "window-maximize", "shell-open", "window-unmaximize", "window-minimize", "window-unminimize", "window-close", "window-hide"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
